# Copyright (c) 2025-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//base/security/certificate_manager/cert_manager.gni")
import("//build/ohos.gni")

ohos_shared_library("certmanager_ani") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    boundary_sanitize = true
    debug = false
    integer_overflow = true
    ubsan = true
    cfi_vcall_icall_only = true
  }
  include_dirs = [
    "include",
  ]
  sources = [
    "./src/cm_ani.cpp",
    "./src/cm_install_private_cert_impl.cpp",
    "./src/cm_uninstall_private_cert_impl.cpp",
    "./src/cm_get_app_cert_impl.cpp",
    "./src/cm_get_cred_list_impl.cpp",
    "./src/cm_get_cred_list_by_uid_impl.cpp",
    "./src/cm_get_ukey_cert_list_impl.cpp",
    "./src/cm_init_impl.cpp",
    "./src/cm_update_impl.cpp",
    "./src/cm_finish_impl.cpp",
    "./src/cm_abort_impl.cpp",
    "./src/cm_is_authorized_app_impl.cpp",
    "./src/cm_get_ca_list_impl.cpp",
    "./src/cm_get_cert_info_impl.cpp",
    "./src/cm_get_cert_store_path.cpp",
    "./src/cm_install_user_ca_sync_impl.cpp",
    "./src/cm_uninstall_user_ca_sync_impl.cpp",
  ]
  external_deps = [
    "c_utils:utils",
    "runtime_core:ani",
    "ipc:ipc_core",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "os_account:os_account_innerkits",
    "samgr:samgr_proxy",
  ]
  cflags_cc = [
    "-Wall",
    "-Werror",
  ]
  deps = [
    "${cert_manager_root_dir}/frameworks/cert_manager_standard/main/common:libcert_manager_common_standard_static",
    "${cert_manager_root_dir}/interfaces/innerkits/cert_manager_standard/main:cert_manager_sdk",
    "${cert_manager_root_dir}/interfaces/kits/ani/cm_ani_common:cm_ani_common_static",
  ]

  subsystem_name = "security"
  part_name = "certificate_manager"
}

generate_static_abc("certmanager_abc") {
  base_url = "./ets"
  files = [ "./ets/@ohos.security.certManager.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/certmanager_abc.abc"
}

ohos_prebuilt_etc("certmanager_ani_abc_etc") {
  source = "$target_out_dir/certmanager_abc.abc"
  module_install_dir = "framework"
  subsystem_name = "security"
  part_name = "certificate_manager"
  deps = [ ":certmanager_abc" ]
}
