# Copyright (c) 2025-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//base/security/certificate_manager/cert_manager.gni")
import("//build/ohos.gni")

ohos_shared_library("certmanager_dialog_ani") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    boundary_sanitize = true
    debug = false
    integer_overflow = true
    ubsan = true
    cfi_vcall_icall_only = true
  }
  include_dirs = [
    "include",
  ]
  sources = [
    "./src/cm_dialog_ani.cpp",
    "./src/cm_open_dialog.cpp",
    "./src/cm_open_certmanager_dialog.cpp",
    "./src/cm_open_install_dialog.cpp",
    "./src/cm_open_uninstall_dialog.cpp",
    "./src/cm_open_cert_detail_dialog.cpp",
    "./src/cm_open_auth_dialog.cpp",
    "./src/cm_open_auth_dialog_with_request.cpp",
    "./src/cm_open_ukey_auth_dialog.cpp",
    "../../common/src/cm_dialog_api_common.cpp",
  ]
  external_deps = [
    "c_utils:utils",
    "runtime_core:ani",
    "ability_base:base",
    "ability_base:want",
    "ability_runtime:ani_base_context",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "access_token:libaccesstoken_sdk",
    "ace_engine:ace_uicontent",
    "ipc:ipc_core",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
    "runtime_core:libarkruntime",
  ]
  cflags_cc = [
    "-Wall",
    "-Werror",
  ]
  deps = [
    "${cert_manager_root_dir}/frameworks/cert_manager_standard/main/common:libcert_manager_common_standard_static",
    "${cert_manager_root_dir}/interfaces/innerkits/cert_manager_standard/main:cert_manager_sdk",
    "${cert_manager_root_dir}/interfaces/kits/ani/cm_ani_common:cm_ani_common_static",
  ]

  subsystem_name = "security"
  part_name = "certificate_manager"
}

generate_static_abc("certmanager_dialog_abc") {
  base_url = "./ets"
  files = [ "./ets/@ohos.security.certManagerDialog.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/certmanager_dialog_abc.abc"
}

ohos_prebuilt_etc("certmanager_dialog_ani_abc_etc") {
  source = "$target_out_dir/certmanager_dialog_abc.abc"
  module_install_dir = "framework"
  subsystem_name = "security"
  part_name = "certificate_manager"
  deps = [ ":certmanager_dialog_abc" ]
}
