# Copyright (c) 2025-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/certificate_manager/cert_manager.gni")
import("//build/ohos.gni")

config("cm_ani_common_config") {
  include_dirs = [
    "./builder/include",
    "./impl/include",
    "./utils/include",
    "../../common/include",
  ]
}

ohos_static_library("cm_ani_common_static") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    boundary_sanitize = true
    debug = false
    integer_overflow = true
    ubsan = true
    cfi_vcall_icall_only = true
  }
  public_configs = [ ":cm_ani_common_config" ]
  include_dirs = [
    "./builder/include",
    "./impl/include",
    "./utils/include",
    "../../common/include",
  ]
  sources = [
    "./builder/src/cm_result_builder.cpp",
    "./impl/src/cm_ani_impl.cpp",
    "./impl/src/cm_ani_common.cpp",
    "./impl/src/cm_ani_async_impl.cpp",
    "./utils/src/cm_ani_utils.cpp",
  ]
  external_deps = [
    "c_utils:utils",
    "runtime_core:ani",
    "runtime_core:ani_helpers",
    "ability_base:base",
    "ability_runtime:ani_base_context",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
  ]
  cflags_cc = [
    "-Wall",
    "-Werror",
  ]
  deps = [
    "${cert_manager_root_dir}/frameworks/cert_manager_standard/main/common:libcert_manager_common_standard_static",
    "${cert_manager_root_dir}/interfaces/innerkits/cert_manager_standard/main:cert_manager_sdk",
  ]
  complete_static_lib = true
  subsystem_name = "security"
  part_name = "certificate_manager"
}
