# Copyright (C) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/certificate_manager/cert_manager.gni")
import("//build/ohos.gni")

config("cert_manager_engine_core_config") {
  include_dirs = [ "include" ]
}
ohos_static_library("cert_manager_engine_core_standard") {
  subsystem_name = "security"
  part_name = "certificate_manager"
  public_configs = [ ":cert_manager_engine_core_config" ]
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    boundary_sanitize = true
    debug = false
    integer_overflow = true
    ubsan = true
  }

  defines = [ "OPENSSL_SUPPRESS_DEPRECATED" ]
  include_dirs = [ "${cert_manager_root_dir}/interfaces/innerkits/cert_manager_standard/main/include" ]
  cflags = [
    "-Wall",
    "-Werror",
  ]
  sources = [
    "src/cert_manager.c",
    "src/cert_manager_app_cert_process.c",
    "src/cert_manager_auth_list_mgr.c",
    "src/cert_manager_auth_mgr.c",
    "src/cert_manager_check.c",
    "src/cert_manager_crypto_operation.c",
    "src/cert_manager_double_list.c",
    "src/cert_manager_file.c",
    "src/cert_manager_file_operator.c",
    "src/cert_manager_key_operation.c",
    "src/cert_manager_mem.c",
    "src/cert_manager_permission_check.cpp",
    "src/cert_manager_query.c",
    "src/cert_manager_service.c",
    "src/cert_manager_session_mgr.c",
    "src/cert_manager_status.c",
    "src/cert_manager_storage.c",
    "src/cert_manager_ukey_operation.c",
    "src/cert_manager_updateflag.c",
    "src/cert_manager_uri.c",
    "src/cm_event_process.c",
  ]

  deps = [
    "${cert_manager_root_dir}/frameworks/cert_manager_standard/main/common:libcert_manager_common_standard_static",
    "${cert_manager_root_dir}/frameworks/cert_manager_standard/main/os_dependency:libcert_manager_ipc_client_static",
    "${cert_manager_root_dir}/services/cert_manager_standard/cert_manager_engine/main/rdb:libcert_manager_rdb_static",
  ]
  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "huks:libhukssdk",
    "ipc:ipc_core",
    "openssl:libcrypto_shared",
    "bundle_framework:appexecfwk_core",
  ]

  complete_static_lib = true
}
