# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/certificate_manager/cert_manager.gni")
import("//build/ohos.gni")

config("cert_manager_config") {
  include_dirs = [ "include" ]
}

ohos_static_library("libcert_manager_sg_report_static") {
  subsystem_name = "security"
  part_name = "certificate_manager"
  public_configs = [ ":cert_manager_config" ]
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    boundary_sanitize = true
    debug = false
    integer_overflow = true
    ubsan = true
  }

  deps = [
    "${cert_manager_root_dir}/frameworks/cert_manager_standard/main/common:libcert_manager_common_standard_static",
    "${cert_manager_root_dir}/interfaces/innerkits/cert_manager_standard/main:cert_manager_sdk",
    "${cert_manager_root_dir}/services/cert_manager_standard/cert_manager_engine/main/rdb:libcert_manager_rdb_static",
  ]
  sources = [
    "src/cm_security_guard_info.c",
    "src/cm_security_guard_report.cpp",
  ]
  cflags = [
    "-Wall",
    "-Werror",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
    "ipc:ipc_single",
  ]
  if (support_security_guard) {
    cflags += [ "-DSUPPORT_SECURITY_GUARD" ]
    cflags_cc = [ "-DSUPPORT_SECURITY_GUARD" ]
    external_deps += [ "security_guard:libsg_collect_sdk" ]
  }
  complete_static_lib = true
}
